[package]
name = "rust_101"
version = "0.1.0"
authors = ["Chris Felli <cfelli317@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
libc = "0.2"
log = "0.4"
serde = "1.0.104"
rocket = "0.4.2"

# Other HTTP Servers:
# hyper = "0.13.1"
# gotham = "0.4.0"
